--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "eslint-plugin-prettier": "^3.0.0",
     "parcel-bundler": "^1.10.2",
     "prettier": "^1.14.3"
+  },
+  "dependencies": {
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2"
   }
 }
