--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
     "extends": [
         "eslint:recommended",
         "prettier",
-        "prettier/react"
+        "prettier/react",
+        "plugin:react/recommended"
     ],
     "parserOptions": {
         "ecmaVersion": 2018,
