--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "^5.6.1",
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-react": "^7.11.1",
     "parcel-bundler": "^1.10.2",
     "prettier": "^1.14.3"
   },
