--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prettier": "^1.14.3"
   },
   "dependencies": {
+    "petfinder-client": "0.0.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
   }
