--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "format-check": "prettier --list-different \"src/**/*.{js,jsx,css,json}\"",
     "lint": "eslint \"src/**/*.{js, jsx}\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "parcel src/index.html"
+    "dev": "parcel src/index.html",
+    "test": "jest --silent",
+    "test:update": "jest --silent -u"
   },
   "keywords": [],
   "author": "",
@@ -26,8 +28,10 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
+    "jest": "^23.6.0",
     "parcel-bundler": "^1.10.2",
-    "prettier": "^1.14.3"
+    "prettier": "^1.14.3",
+    "react-test-renderer": "^16.5.2"
   },
   "dependencies": {
     "@reach/router": "^1.2.1",
