--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "parcel src/index.html",
     "test": "jest --silent",
-    "test:update": "jest --silent -u"
+    "test:update": "jest --silent -u",
+    "test:watch": "jest --silent --watch",
+    "test:coverage": "jest --silent --coverage"
   },
   "keywords": [],
   "author": "",
