Add react-loadable and convert Details into loadable component

--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "format": "prettier --write \"src/**/*.{js,jsx,css,json}\"",
     "format-check": "prettier --list-different \"src/**/*.{js,jsx,css,json}\"",
     "lint": "eslint \"src/**/*.{js, jsx}\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "parcel src/index.html",
     "test": "jest --silent",
+    "dev": "parcel src/index.html",
     "test:update": "jest --silent -u",
     "test:watch": "jest --silent --watch",
     "test:coverage": "jest --silent --coverage"
@@ -39,6 +38,7 @@
     "@reach/router": "^1.2.1",
     "petfinder-client": "0.0.3",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "react-loadable": "^5.5.0"
   }
 }
