--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "petfinder-client": "0.0.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-loadable": "^5.5.0"
+    "react-loadable": "^5.5.0",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   }
 }
